paginas de single

--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -850,7 +850,7 @@ footer form[action="contact"] button {
     margin: 0 0 15px;
 }
 
-.retrieve.retrieve-curso, .retrieve.retrieve-blog{
+.retrieve.retrieve-Curso, .retrieve.retrieve-Blog{
     padding-top: 0;
 }
 
