--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -843,6 +843,7 @@ footer form[action="contact"] button {
 
 .retrieve{
     background-color: aliceblue;
+    padding: 80px 0;
 }
 
 .retrieve .retrieve-content img{
