--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -174,6 +174,13 @@ a {
     line-height: 1.5;
 }
 
+h3{
+    color: #4b4b4b;
+    padding: 16px 0 8px;
+    line-height: 1.5;
+    font-size: 16px;
+}
+
 p.title {
     font-size: 30px;
     color: #393939;
@@ -452,6 +459,7 @@ header wrapper {
 #Intro .header-middle img.image-header {
     position: absolute;
     max-height: 640px;
+    height: 640px;
     top: -10%;
     right: -16%;
     z-index: 0;
@@ -658,10 +666,14 @@ footer wrapper {
 }
 
 footer .column {
-    width: 30%;
+    width: 33%;
     display: flex;
     flex-direction: column;
     padding: 24px;
+}
+
+footer .column.col-1 .logo {
+    object-fit: contain;
 }
 
 footer form[action="search"] {
@@ -866,6 +878,20 @@ footer form[action="contact"] button {
 .retrieve .retrieve-content p, .retrieve .retrieve-content li{
     font-size: 18px;
     color: #4b4b4b;
+    line-height: 1.5;
+}
+
+.retrieve .retrieve-content li{
+    margin-left: 16px;
+}
+
+.retrieve .retrieve-content ul{
+    width: 75%;
+    margin: auto;
+}
+
+.retrieve.retrieve-Tratamentos .retrieve-content p, .retrieve.retrieve-Tratamentos .retrieve-content li, .retrieve.retrieve-Tratamentos .retrieve-content ul{
+    text-align: left;
 }
 
 .retrieve .retrieve-content img{
@@ -875,8 +901,8 @@ footer form[action="contact"] button {
 
 .retrieve .retrieve-content .title{
     color: #18e;
-    font-weight: bold;
     margin: 20px 0 15px;
+    font-size: 30px;
 }
 
 .retrieve.retrieve-blog .retrieve-content .title{
@@ -913,10 +939,8 @@ footer form[action="contact"] button {
     letter-spacing: 1px;
 }
 
-
 .container-galeria{
-    width: 80%;
-    margin-left: 10%;
+    width: 100%;
 }
 /* Responsive */
 
