--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -887,7 +887,7 @@ footer form[action="contact"] button {
 
 .retrieve .retrieve-content ul{
     width: 75%;
-    margin: auto;
+    margin: 16px auto;
 }
 
 .retrieve.retrieve-Tratamentos .retrieve-content p, .retrieve.retrieve-Tratamentos .retrieve-content li, .retrieve.retrieve-Tratamentos .retrieve-content ul{
@@ -903,6 +903,7 @@ footer form[action="contact"] button {
     color: #18e;
     margin: 20px 0 15px;
     font-size: 30px;
+    text-align: center;
 }
 
 .retrieve.retrieve-blog .retrieve-content .title{
