--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -963,6 +963,11 @@ footer form[action="contact"] button {
         right: -36%;
     }
     
+    footer .column.col-1 .logo {
+        max-width: 300px;
+        margin: auto;
+        width: 100%;
+    }  
 }
 
 @media screen and (max-width: 768px) {
@@ -1072,4 +1077,5 @@ footer form[action="contact"] button {
     footer .column {
         width: 100%;
     }
+
 }
