--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -890,7 +890,12 @@ footer form[action="contact"] button {
     margin: 16px auto;
 }
 
-.retrieve.retrieve-Tratamentos .retrieve-content p, .retrieve.retrieve-Tratamentos .retrieve-content li, .retrieve.retrieve-Tratamentos .retrieve-content ul{
+.retrieve.retrieve-Tratamentos .retrieve-content p,
+.retrieve.retrieve-Tratamentos .retrieve-content li,
+.retrieve.retrieve-Tratamentos .retrieve-content ul,
+.retrieve.retrieve-Cursos .retrieve-content p,
+.retrieve.retrieve-Cursos .retrieve-content li,
+.retrieve.retrieve-Cursos .retrieve-content ul{
     text-align: left;
 }
 
@@ -904,9 +909,12 @@ footer form[action="contact"] button {
     margin: 20px 0 15px;
     font-size: 30px;
     text-align: center;
+    width: 75%;
 }
 
-.retrieve.retrieve-Tratamentos .retrieve-content p.title{
+.retrieve.retrieve-Tratamentos .retrieve-content p.title,
+.retrieve.retrieve-Cursos .retrieve-content p.title,
+.retrieve.retrieve-Cursos .retrieve-content p.date{
     text-align: center;
 }
 
