--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -934,7 +934,7 @@ footer form[action="contact"] button {
     margin: 0 0 15px;
 }
 
-.retrieve.retrieve-Curso, .retrieve.retrieve-Blog{
+.retrieve.retrieve-Cursos, .retrieve.retrieve-Artigos{
     padding-top: 0;
 }
 
