--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -687,12 +687,12 @@ header wrapper {
     width: 50%;
 }
 
-#post-84 .entry-content .wpcf7 form input{
+#post-84 .entry-content .wpcf7 form input, #post-84 .entry-content .wpcf7 form textarea{
     width: 90%;
 }
 
 #post-84 .entry-content .wpcf7 form input[type="submit"]{
-    width: 90%;
+    width: auto;
 }
 
 footer {
