--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -681,7 +681,7 @@ header wrapper {
 }
 
 #post-84 .entry-content .address p i{
-    padding: 0 12px;
+    padding-left: 12px;
 }
 
 #post-84 .entry-content .wpcf7{
