--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -461,7 +461,7 @@ header #header-top.sticky {
     line-height: 1.25;
 }
 
-#Cursos .cards .card p.date {
+#Cursos .cards .card p.date, #Artigos .cards .post .card .card-content p.date {
     padding-top: 20px;
     margin: 0 16px;
     font-size: 14px;
@@ -537,20 +537,6 @@ header #header-top.sticky {
     padding: 0;
     box-sizing: border-box;
     font-size: 16px;
-}
-
-#Artigos .cards .post .card .card-content p.info {
-    font-size: 14px;
-    padding: 0;
-    color: #999;
-}
-
-#Artigos .cards .post .card .card-content p.info span {
-    font-size: 14px;
-    font-family: 'Roboto Bold';
-    letter-spacing: 0.5px;
-    color: #18e;
-    text-transform: uppercase;
 }
 
 #Artigos .button {
@@ -868,6 +854,7 @@ footer form[action="contact"] button {
 
 .retrieve .retrieve-content .date {
     margin: 0 0 15px;
+    font-style: oblique;
 }
 
 .retrieve.retrieve-Cursos, .retrieve.retrieve-Artigos {
