--- a/wp-content/themes/wolpe/css/style.css
+++ b/wp-content/themes/wolpe/css/style.css
@@ -533,7 +533,7 @@ header #header-top.sticky {
 }
 
 #Artigos .cards .post .card .card-content p.date {
-    margin: 0 16px;
+    margin: auto;
     font-size: 14px;
     color: #898989;
     width: 100%;
